--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title >"{{ site.title }}"</title>
+    <title >"{{ site.title | default: "Adoria298 Official Website" }}"</title>
 
 {% seo %}
 
