--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
             <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           </ul>
         {% endif %}
+        
+        <a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel"</a>
       </header>
       <section>
 
