Added projects link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title >"{{ site.title | default: "Adoria298 Official Website" }}"</title>
+    <title >"{{ page.title | default: "Adoria298 Official Website" }}"</title>
 
 {% seo %}
 
@@ -36,6 +36,7 @@
         {% endif %}
         
         <a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel"</a>
+        <a href="projects.html">My Projects</a>
       </header>
       <section>
 
