Created new paragraphs for each link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
           </ul>
         {% endif %}
         
-        <a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel"</a>
-        <a href="projects.html">My Projects</a>
+        <p><a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel</a></p>
+        <p><a href="projects.html">My Projects</a></p>
       </header>
       <section>
 
