--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small><a hreh=https://github.com/Adoria298/adoria298.github.io/issues>Report a bug with this website</a></small</p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
