Added video_code link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
         
         <p><a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel</a></p>
         <p><a href="projects.html">My Projects</a></p>
+        <p><a href="video_code.html">Code for videos</a></p>
       </header>
       <section>
 
