--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
         {% endif %}
         
         <p><a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel</a></p>
-        <p><a href="projects.html">My Projects</a></p>
-        <p><a href="video_code/index.html">Code for videos</a></p>
+        <p><a href="https://adoria298.github.io/projects.html">My Projects</a></p>
+        <p><a href="https://adoria298.github.io/video_code/index.html">Code for videos</a></p>
       </header>
       <section>
 
