--- a/_layouts/video_code.html
+++ b/_layouts/video_code.html
@@ -36,10 +36,10 @@
         {% endif %}
         
         <p><a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel</a></p>
-        <p><a href="projects.html">My Projects</a></p>
-        <p><a href="video_code/index.html">Code for videos</a>
+        <p><a href="https://adoria298.github.io/projects.html">My Projects</a></p>
+        <p><a href="https://adoria298.github.io/video_code/index.html">Code for videos</a>
           <ul>
-            <li><a href="minecraft_advancements/index.html">LearnToCode:Minecraft Advancements</a></li>
+            <li><a href="https://adoria298.github.io/video_code/minecraft_advancements/index.html">LearnToCode:Minecraft Advancements</a></li>
           </ul>
         </p>
       </header>
