--- a/_layouts/video_code.html
+++ b/_layouts/video_code.html
@@ -37,7 +37,7 @@
         
         <p><a href="https://www.youtube.com/channel/UCZxZ8oZnKXGG_O9ZqBFEXSQ">View my YouTube Channel</a></p>
         <p><a href="https://adoria298.github.io/projects.html">My Projects</a></p>
-        <p><a href="https://adoria298.github.io/video_code/index.html">Code for videos</a>
+        <p><a href="https://adoria298.github.io/video_code.html">Code for videos</a>
           <ul>
             <li><a href="https://adoria298.github.io/video_code/minecraft_advancements/index.html">LearnToCode:Minecraft Advancements</a></li>
           </ul>
