--- a/_layouts/video_code.html
+++ b/_layouts/video_code.html
@@ -40,7 +40,7 @@
         <p><a href="https://adoria298.github.io/video_code.html">Code for videos</a>
           <ul>
             <li><a href="https://adoria298.github.io/video_code/minecraft_advancements/index.html">LearnToCode:Minecraft Advancements</a></li>
-            <li><a href="https://adoria298.github.io/practice_python.html">Practise Python</a></li>
+            <li><a href="https://adoria298.github.io/practise_python.html">Practise Python</a></li>
           </ul>
         </p>
       </header>
